@@ -71,6 +71,20 @@
         <div id="news">
 	    <h2 class="">News</h2>
 
+	    <h3>September 22, 2008</h3>
+   	      <b>Stable</b> version 0.12.0 released!  New features since previous stable
+   	      version include:
+   	      <ul>
+   	        <li>New Tasque add-in</li>
+   	        <li>Add "New notebook..." menu item to Notebook toolbar button</li>
+   	        <li>Many fixes to note synchronization</li>
+   	        <li>Improvements to Bugzilla and HTML Export add-ins</li>
+   	        <li>Tray icon ported to Gtk.StatusIcon</li>
+   	        <li>Support for --debug, --trace, and --profile when running Tomboy</li>
+   	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_12_0/NEWS?view=markup">more</a></li>
+              </ul>
+   	      <a href="download.html">Download it</a>
+
 	    <h3>August 21, 2008</h3>
    	      <b>Unstable</b> version 0.11.3 released!  New in this release:
    	      <ul>
